<resources>
    <string name="app_name">My Application</string>
    <string name="btnIrcalendarioMain">Calendario</string>
    <string name="btnInspFecha">Inspeccionar Fecha</string>
    <string name="btnAddEventCalendar">Agregar Evento</string>
    <string name="hora_inicioAddEvento">Hora Inicio</string>
    <string name="fecha_inicioAddEvetno">Fecha Inicio</string>
    <string name="hora_inicioAddEventoo">Hora Inicio</string>
    <string name="Btnagregar_evento">Agregar evento</string>
    <string name="costo_personas_adicionalAddEvento">Costo Personas adicional</string>
    <string name="cuantas_personasAddEvento">Cuantas Personas</string>
    <string name="fecha_finAddEvento">Fecha Fin</string>
    <string name="horafinAddEvento">HoraFin</string>
    <string name="btnAddEventCalendarOrg">Button</string>
    <string name="TVIndicacion">Seleccione los días del evento de forma ordenada</string>
    <string name="continuarAddEvent1">Continuar</string>
    <string name="seleccion_los_d_as_del_evento_de_forma_consecutiva">Seleccion los días del evento de forma consecutiva</string>
    <string name="continuar">Continuar</string>
    <string name="hora_inicio">Hora Inicio</string>
    <string name="hora_fin">Hora fin</string>
    <string name="btnhora_inicio">Hora inicio</string>
    <string name="btnhorafin">HoraFin</string>
    <string name="seleccione_la_hora_de_inicio_y_de_posterior_la_de_fin">Seleccione la hora de inicio y de posterior la de fin</string>
    <string name="seleccione_la_hora_de_inicio_y_posteriormente_la_de_fin">Seleccione la hora de inicio y posteriormente la de fin</string>
    <string name="seleccione_al_cliente_en_caso_de_que_exista">Seleccione al cliente en caso de que exista</string>
    <string name="tel_fono1">Teléfono1</string>
    <string name="apellido_materno">Apellido materno</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="cantidad_de_personas">Cantidad de personas</string>
    <string name="continuarAddEvent3">Continuar</string>
    <string name="costo_persona_adicional">Costo persona adicional</string>
    <string name="nombre_s">Nombre(s)</string>
    <string name="precio_total">Precio total</string>
    <string name="tel_fono2">Teléfono2</string>
    <string name="cantidad">Cantidad</string>
    <string name="seleccione_la_fecha_del_anticipo">Seleccione la fecha del anticipo</string>
    <string name="terminar">Terminar</string>
</resources>
