<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.yairrovero.myapplication.AgregarEvento3Activity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Spinner
            android:id="@+id/spinnerClientesAddEvent3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="21dp"
            android:layout_alignParentStart="true"
            tools:ignore="UnknownId" />

        <EditText
            android:id="@+id/ETNombreAddEvent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerClientesAddEvent3"
            android:layout_marginEnd="78dp"

            android:layout_marginTop="11dp"
            android:layout_toStartOf="@+id/btnContinuarAddEvent3"
            android:ems="10"
            android:hint="@string/nombre_s"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ETApPAddEvent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/ETNombreAddEvent3"
            android:layout_alignStart="@+id/ETNombreAddEvent3"
            android:layout_below="@+id/ETNombreAddEvent3"
            android:layout_marginEnd="-180dp"
            android:layout_marginStart="170dp"
            android:layout_marginTop="-43.5dp"
            android:ems="10"
            android:hint="@string/apellido_paterno"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ETApMAddEvent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/ETNombreAddEvent3"

            android:layout_alignStart="@+id/textView10"
            android:layout_below="@+id/ETNombreAddEvent3"
            android:ems="10"
            android:hint="@string/apellido_materno"
            android:inputType="textPersonName"
            tools:ignore="UnknownId" />

        <EditText
            android:id="@+id/ETTel1AddEvent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/ETApMAddEvent3"
            android:layout_alignBottom="@+id/ETApMAddEvent3"
            android:layout_alignParentEnd="true"
            android:layout_alignStart="@+id/ETApPAddEvent3"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:hint="@string/tel_fono1"
            android:inputType="phone" />

        <EditText
            android:id="@+id/EtTel2AddEvent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/ETApMAddEvent3"
            android:layout_alignStart="@+id/ETApMAddEvent3"
            android:layout_below="@+id/ETTel1AddEvent3"
            android:layout_toEndOf="@+id/ETApMAddEvent3"
            android:ems="10"
            android:hint="@string/tel_fono2"
            android:inputType="phone" />

        <EditText
            android:id="@+id/ETPrecioTotalAddEvent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/ETApPAddEvent3"
            android:layout_alignStart="@+id/ETTel1AddEvent3"
            android:layout_below="@+id/ETTel1AddEvent3"
            android:ems="10"
            android:hint="@string/precio_total"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/ETNumPersonasAddEvent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/EtTel2AddEvent3"
            android:layout_below="@+id/ETPrecioTotalAddEvent3"
            android:ems="10"
            android:hint="@string/cantidad_de_personas"
            android:inputType="number" />

        <EditText
            android:id="@+id/ETCostoPersonaAdicAddEvent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ETPrecioTotalAddEvent3"
            android:layout_below="@+id/ETPrecioTotalAddEvent3"
            android:layout_toStartOf="@+id/textView9"
            android:ems="10"
            android:hint="@string/costo_persona_adicional"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnContinuarAddEvent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/spinnerClientesAddEvent3"
            android:layout_below="@+id/EtTipoClienteAddEvent3"
            android:layout_marginTop="30dp"
            android:text="@string/continuarAddEvent3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ETNombreAddEvent3"
            android:layout_marginLeft="-190dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/btnContinuarAddEvent3"
            android:text="*" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ETNombreAddEvent3"
            android:layout_marginLeft="-10dp"
            android:layout_marginTop="45dp"
            android:layout_toEndOf="@+id/btnContinuarAddEvent3"
            android:text="*" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ETNombreAddEvent3"
            android:layout_marginLeft="-10dp"
            android:layout_marginTop="85dp"
            android:layout_toEndOf="@+id/btnContinuarAddEvent3"
            android:text="*" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ETNombreAddEvent3"
            android:layout_marginLeft="-10dp"
            android:layout_marginTop="124dp"
            android:layout_toEndOf="@+id/btnContinuarAddEvent3"
            android:text="*" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/ETNombreAddEvent3"
            android:layout_marginLeft="-190dp"
            android:layout_marginTop="125dp"
            android:layout_toEndOf="@+id/btnContinuarAddEvent3"
            android:text="*" />


        <EditText
            android:id="@+id/EtTipoClienteAddEvent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/ETTel1AddEvent3"
            android:layout_alignStart="@+id/ETCostoPersonaAdicAddEvent3"
            android:layout_below="@+id/ETCostoPersonaAdicAddEvent3"
            android:ems="10"
            android:hint="Tipo de cliente(1/2)"
            android:inputType="number" />

        <EditText
            android:id="@+id/ETDescrpcionAddEvent3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/ETNumPersonasAddEvent3"
            android:ems="10"
            android:hint="Descripción adicional"
            android:inputType="textPersonName" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>